# sdl-cmake-template

./: CMakeLists.txt  README.md
cmake/modules/: FindGLM.cmake
src/test/: main.cpp
